--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,13 +1,13 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "Charlie Hewitt"
   uri         : "http://name.com"
   email       : "name@name.com"
-  bio         : "This is the first name."
+  bio         : "PhD Student, Ordnance Survey Studentship"
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+  twitter     : "c_hewitt1"
+
 
 Name2 Name2:
   name        : "Name2 Name2"
